--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=86fdb6e7231d320be8b4a58237c306d0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/studentmanagement?serverVersion=mariadb-10.4.27&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/student_management?serverVersion=mariadb-10.4.27&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
